--- a/ZKprj/CommunityDDB/WebContent/index.zul
+++ b/ZKprj/CommunityDDB/WebContent/index.zul
@@ -1,6 +1,50 @@
-<?page title="Auto Generated index.zul"?>
-<window title="Hello World!!" border="normal" width="200px">
-
-<label value="You are using: ${desktop.webApp.version}"/>
-
-</window>
+<?page title="新北市社區災害資料庫"?>
+<zk>
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp" />
+	<script src="/res/script/initMap.js" />
+	<borderlayout>
+		<north size="20%">
+			<label style="font-size:45">新北市社區災害資料庫</label>
+		</north>
+		<west size="30%">
+			<vbox>
+				<label>請輸入社區名稱:</label>
+				<combobox>
+					<comboitem>社區1</comboitem>
+					<comboitem>社區2</comboitem>
+					<comboitem>社區3</comboitem>
+				</combobox>
+				<tree width="100%" multiple="true" checkmark="true">
+					<treecols>
+						<treecol label="詳細資訊" />
+					</treecols>
+					<treechildren>
+						<treeitem>
+							<treerow>
+								<treecell label="社區1" />
+							</treerow>
+							<treechildren>
+								<treeitem>
+									<treerow>
+										<treecell label="邊界" />
+									</treerow>
+								</treeitem>
+								<treeitem>
+									<treerow>
+										<treecell label="排水" />
+									</treerow>
+								</treeitem>
+							</treechildren>
+						</treeitem>
+					</treechildren>
+				</tree>
+			</vbox>
+		</west>
+		<center>
+			<div id="map_canvas" style="width:100%; height:100%"></div>
+		</center>
+		<south size="10%">
+			<label style="font-size:20">power by sinotech</label>
+		</south>
+	</borderlayout>
+</zk>
