finish the "communityName combobox" model, and render at index.zul
use DAO pattern as db connect pattern. see
http://www.oracle.com/technetwork/java/dataaccessobject-138824.html

--- a/ZKprj/CommunityDDB/WebContent/index.zul
+++ b/ZKprj/CommunityDDB/WebContent/index.zul
@@ -9,7 +9,7 @@
 		<west size="30%">
 			<vbox>
 				<label>請輸入社區名稱:</label>
-				<combobox>
+				<combobox id="communityName_cbbox" apply="tw.cddb.ctrl.CommunityNameComboboxCtrl">
 					<comboitem>社區1</comboitem>
 					<comboitem>社區2</comboitem>
 					<comboitem>社區3</comboitem>
