能夠在圖面上顯示所有的 Factor
TODO: JS Refactor, parent select on event

--- a/ZKprj/CommunityDDB/WebContent/index2.zul
+++ b/ZKprj/CommunityDDB/WebContent/index2.zul
@@ -7,6 +7,7 @@
 	<script src="/res/script/GMapFunc/Symbol.js" />
 	<script src="/res/script/GMapFunc/Polygon.js" />
 	<script src="/res/script/GMapFunc/Point.js" />
+	<script src="/res/script/GMapFunc/Polyline.js" />
 	<script src="/res/script/3rdParty/wicket.js" />
 	
 	<window mode="overlapped" position="left,top" width="505px" id="overlap_Window">
