--- a/ZKprj/CommunityDDB/WebContent/index.zul
+++ b/ZKprj/CommunityDDB/WebContent/index.zul
@@ -10,7 +10,7 @@
 	<script src="/res/script/GMapFunc/Point.js" />
 	<script src="/res/script/GMapFunc/Polyline.js" />
 	<script src="/res/script/3rdParty/wicket.js" />
-	
+	<style src="/res/style/infowindow.css"/>
 	<window mode="overlapped" position="left,top" width="505px" id="overlap_Window">
 		<combobox width="500px" id="communityName_cbbox" apply="tw.cddb.ctrl.CommunityNameComboboxCtrl" autocomplete="true" autodrop="true">
 		</combobox>
@@ -20,7 +20,7 @@
 			</treecols>
 		</tree>
 	</window>
-	<borderlayout>
+	<borderlayout apply="tw.cddb.ctrl.IndexCtrl">
 		<center>
 			<div id="map_canvas" style="width:100%; height:100%"></div>
 		</center>
